Dev (#20)
* changed timezone from UTC to CET and changed weather timer from local variable to last inserted measurement

* added request for pressure variables

* added password reset for user and for admin. added delete request.

* automatically setup all needed roles.

* delete request was added.

* status and time of order are now set  automatically

* all roles are created at the first start

* login now return json object.

* added tirecontingent

* added cross origin requests config

* changed port to 8081

* changed user identification from first- and lastName to username.

* minor changes